--- a/templates/register.html
+++ b/templates/register.html
@@ -1,21 +1,24 @@
 {% extends "base.html" %}
 
 {% block main %}
+{% from "_macro.html" import validators %}
 <div class="container-fluid">
-    <form action="{{ url_for('register') }}" method="post">
+    <form action="{{ url_for('register') }}" method="post" novalidate>
         {{ form.csrf_token }}
         <div class="row">
             <div class="col-sm-1"><h4>{{ form.name.label }}</h4></div>
             <div class="col-sm-11">{{ form.name(class="form-control") }}</div>
-            {% if  %}
+            {{validators(form.name)}}
         </div>
         <div class="row">
             <div class="col-sm-1"><h4>{{ form.email.label }}</h4></div>
-        <div class="col-sm-11">{{ form.email(class="form-control") }}</div>
+            <div class="col-sm-11">{{ form.email(class="form-control") }}</div>
+            {{validators(form.email)}}
         </div>
         <div class="row">
             <div class="col-sm-1"><h4>{{ form.topic.label }}</h4></div>
             <div class="col-sm-11">{{ form.topic(class="form-control") }}</div>
+            {{validators(form.topic)}}
         </div>
         <div class="col">
         {{ form.submit(class="btn btn-primary") }}
