--- a/templates/base.html
+++ b/templates/base.html
@@ -18,8 +18,12 @@
     <ul class="nav navbar-nav">
       <li class="active"><a href="{{ url_for('index') }}">Home</a></li>
       <li><a href="{{ url_for('register') }}">Register</a></li>
-      <li><a href="#">Edit</a></li>
     </ul>
+    <ul class="nav navbar-nav navbar-right">
+      <li><a href="/login" class="">Login</a></li><li>
+    </ul>
+
+
   </div>
 </nav>
 
