--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,18 @@
 
 <div class="container-fluid">
     <form action="{{ url_for('login') }}" method="post" novalidate>
-        <h1>Esta es la pagina de login</h1>
+        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+        <div class="row">
+            <div class="col-sm-2 col-lg-offset-5 col-md-2 col-md-offset-2 col-xs-2"><h4>{{ form.user(class="form-control")}}</h4></div>
+            <div class="col-sm-2 col-lg-offset-5 col-md-2 col-md-offset-2 col-xs-2"><h5>{{ validators(form.user) }}</h5></div>
+
+        </div>
+        <div class="row">
+            <div class="col-sm-2 col-lg-offset-5 col-md-2 col-md-offset-2 col-xs-2"><h4>{{ form.password(class="form-control")}}</h4></div>
+        </div>
+        <div class="col-sm-2 col-lg-offset-5 col-md-2 col-md-offset-2 col-xs-2">
+            {{ form.submit(class="btn btn-primary") }}
+        </div>
 
     </form>
 
