--- a/templates/base.html
+++ b/templates/base.html
@@ -5,8 +5,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.js') }}"></script>
 </head>
 <body>
 
@@ -20,7 +21,7 @@
       <li><a href="{{ url_for('register') }}">Register</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
-      <li><a href="/login" class="">Login</a></li><li>
+      <li><a href="/login" class="">Login</a></li><li>+
     </ul>
 
 
