--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
 {% from "_macro.html" import validators %}
 
 <div class="container-fluid">
-    <form action="{{ url_for('login') }}" method="post" novalidate>
+    <form id="login-form" action="{{ url_for('login') }}" method="post" novalidate>
         <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
         <div class="row">
             <div class="col-sm-2 col-lg-offset-5 col-md-2 col-md-offset-2 col-xs-2"><h4>{{ form.user(class="form-control")}}</h4></div>
